# machine-manager

./: .gitmodules  Cargo.toml  Dockerfile  Dockerfile-test
cartesi-grpc-interfaces/: Cargo.toml
cartesi-jsonrpc-interfaces/: Cargo.toml
cartesi-jsonrpc-interfaces/src/: index.rs  lib.rs
grpc-cartesi-machine/: Cargo.toml
grpc-cartesi-machine/src/: conversions.rs  lib.rs  test_client.rs
jsonrpc-cartesi-machine/: Cargo.toml
jsonrpc-cartesi-machine/src/: conversions.rs  lib.rs
jsonrpc-cartesi-machine/tests/: cartesi_machine_client_tests.rs
jsonrpc-machine-manager-server/: Cargo.toml
jsonrpc-machine-manager-server/src/: defective_session_registry.rs  lib.rs  main.rs  server_manager.rs  session.rs  session_manager.rs
machine-manager-server/: Cargo.toml
machine-manager-server/src/: defective_session_registry.rs  lib.rs  main.rs  server_manager.rs  session.rs  session_manager.rs
tests/: download-test-images.sh
tests/demo-machine-manager-client/: Cargo.toml  jsonrpc-discover.json
tests/demo-machine-manager-client/src/: main.rs
tests/rust-test-client/: Cargo.toml
tests/rust-test-client/src/: lib.rs
tests/rust-test-client/tests/: cucumber.rs
