# Copyright 2023 Cartesi Pte. Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy of the
# License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed
# under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[package]
name = "jsonrpc-machine-manager-server"
version = "0.1.0"
authors = ["Marko Atanasievski <marko.atanasievski@cartesi.io>"]
edition = "2021"


[[bin]]
name = "jsonrpc-machine-manager"
path = "src/main.rs"


[dependencies]
jsonrpc-cartesi-machine = { path = "../jsonrpc-cartesi-machine" }
grpc-cartesi-machine = { path = "../grpc-cartesi-machine" }

cartesi-jsonrpc-interfaces = { path = "../cartesi-jsonrpc-interfaces" }
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.16.0", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.4"
async-trait = "0.1.51"
rstest = "0.11.0"
async-mutex = "1.4.0"
http = "0.2.4"
getopts = "0.2.21"
sha3 = "0.9.1"
generic-array = "0.14.4"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9"
serde_json = "1.0"
serde = "1.0"
cartesi-grpc-interfaces = { path = "../cartesi-grpc-interfaces" }
base64 = "0.21.2"
hyper = "0.14.20"
tower-service = "0.3.1"
futures-util = "0.3.28"
jsonrpsee = {version = "0.18.2", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
jsonrpsee-types = "0.18.2"
[build-dependencies]
tonic-build = "0.8.2"

[env]
CARTESI_BIN_PATH = "/bin"

